<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/background_view"/>

    <TextView
        android:id="@+id/tv_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/view"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/dashboard_gihari"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_dashboard"
        android:layout_marginTop="-80dp"
        android:rowCount="2"
        android:columnCount="2"
        android:layout_margin="24dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="12dp"
            app:cardCornerRadius="15dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_chat"
                    android:contentDescription="@string/chat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat"
                    android:textColor="@color/black"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="12dp"
            app:cardCornerRadius="15dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_gallery"
                    android:contentDescription="@string/photo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photo"
                    android:textColor="@color/black"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_articles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="12dp"
            app:cardCornerRadius="15dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_articles"
                    android:contentDescription="@string/journal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/journal"
                    android:textColor="@color/black"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="12dp"
            app:cardCornerRadius="15dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_setting"
                    android:contentDescription="@string/configure" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/configure"
                    android:textColor="@color/black"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>

</RelativeLayout>
